<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-starter-parent</artifactId>
        <version>3.2.3</version>
        <relativePath/>
    </parent>

    <groupId>com.iflytek.skillhub</groupId>
    <artifactId>skillhub-parent</artifactId>
    <version>0.1.0</version>
    <packaging>pom</packaging>

    <properties>
        <java.version>17</java.version>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>17</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <modules>
        <module>skillhub-app</module>
        <module>skillhub-domain</module>
        <module>skillhub-auth</module>
        <module>skillhub-search</module>
        <module>skillhub-storage</module>
        <module>skillhub-infra</module>
        <module>skillhub-notification</module>
    </modules>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>com.iflytek.skillhub</groupId>
                <artifactId>skillhub-domain</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.iflytek.skillhub</groupId>
                <artifactId>skillhub-auth</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.iflytek.skillhub</groupId>
                <artifactId>skillhub-search</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.iflytek.skillhub</groupId>
                <artifactId>skillhub-storage</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.iflytek.skillhub</groupId>
                <artifactId>skillhub-infra</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>com.iflytek.skillhub</groupId>
                <artifactId>skillhub-notification</artifactId>
                <version>${project.version}</version>
            </dependency>
        </dependencies>
    </dependencyManagement>
</project>
